daemon: Add helper to get string from config

https://bugs.freedesktop.org/show_bug.cgi?id=82925